--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <title>Slasher Horror Chatbot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="chatbot-container">
-        <h1>Chatbot</h1>
-        <div id="chatbox">
-            <div id="messages"></div>
-        </div>
-        <div id="input-area">
-            <input type="text" id="user-input" placeholder="Type your message here...">
-            <button onclick="sendMessage()">Send</button>
+    <div class="background">
+        <div class="moon"></div>
+        <div class="stars"></div>
+        <div id="chatbot-container">
+            <h1>Slasher Horror Chatbot</h1>
+            <div id="chatbox">
+                <div id="messages"></div>
+            </div>
+            <div id="input-area">
+                <input type="text" id="user-input" placeholder="Type your message here...">
+                <button onclick="sendMessage()">Send</button>
+            </div>
         </div>
     </div>
 
