william afton lmao

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
 <body>
     <div class="background">
         <div class="moon"></div>
+        <div class="slasher-container">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 200" class="slasher" width="100px" height="200px">
+                <rect x="40" y="40" width="20" height="80" fill="black" /> <!-- Body -->
+                <rect x="30" y="0" width="40" height="40" fill="black" /> <!-- Head -->
+                <rect x="29" y="120" width="10" height="60" fill="black" /> <!-- Left leg -->
+                <rect x="61" y="120" width="10" height="60" fill="black" /> <!-- Right leg -->
+                <rect x="10" y="55" width="10" height="60" fill="black" class="weapon" /> <!-- Knife -->
+            </svg>
+        </div> 
         <div class="stars"></div>
         <div id="chatbot-container">
             <h1>Slasher Horror Chatbot</h1>
