--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         </div> 
         <div class="stars"></div>
         <div id="chatbot-container">
-            <h1>Slasher Horror Chatbot</h1>
+            <h1>William Afton</h1>
             <div id="chatbox">
                 <div id="messages"></div>
             </div>
