--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="api-key-prompt">
+        <input type="password" id="api-key-input" placeholder="Enter your API key">
+        <button onclick="setApiKey()">Save Key</button>
+    </div>
     <div class="background">
         <div class="moon"></div>
         <div class="slasher-container">
